fix: miss align rubic and submission file on the top

--- a/src/containers/Rubric/Rubric.scss
+++ b/src/containers/Rubric/Rubric.scss
@@ -51,7 +51,7 @@
   max-height: 100%;
   margin-left: map-get($spacers, 3);
   position: sticky !important;
-  top: 0;
+  top: map-get($spacers, 1) * -1;
 
   .grading-rubric-header {
     box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.3) !important;
